--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,12 +10,15 @@ crate-type = ["cdylib", "rlib"]
 anyhow = "1.0.94"
 console_error_panic_hook = "0.1.6"
 console_log = "1.0.0"
+flatgeobuf = "4.4.0"
 geo = "0.29.3"
 geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
+geozero = { version = "0.14.0", default-features = false, features = ["with-geo"] }
 log = "0.4.22"
 serde-wasm-bindgen = "0.6.5"
 serde_json = "1.0.133"
 wasm-bindgen = "0.2.97"
+wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.74", features = ["console"] }
 
 # For local development, build dependencies in release mode once, but otherwise
