--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,7 @@ geo = "0.29.3"
 geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
 geozero = { version = "0.14.0", default-features = false, features = ["with-geo"] }
 log = "0.4.22"
+serde = "1.0.216"
 serde-wasm-bindgen = "0.6.5"
 serde_json = "1.0.133"
 wasm-bindgen = "0.2.97"
