--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,8 @@
     "@turf/center": "^7.2.0",
     "@turf/destination": "^7.2.0",
     "@turf/distance": "^7.2.0",
+    "route-snapper": "^0.4.9",
+    "route-snapper-ts": "^0.0.8",
     "svelte-maplibre": "^0.9.7",
     "svelte-utils": "github:a-b-street/svelte-utils"
   }
