--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,6 +17,7 @@ geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"]
 geozero = { version = "0.14.0", default-features = false, features = ["with-geo"] }
 log = "0.4.22"
 petgraph = "0.6.5"
+route-snapper-graph = { git = "https://github.com/dabreegster/route_snapper" }
 rstar = "0.12.2"
 serde = "1.0.216"
 serde-wasm-bindgen = "0.6.5"
