--- a/data_prep/Cargo.toml
+++ b/data_prep/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.82"
 flatgeobuf = { version = "4.5.0", default-features = false }
 geo = "0.29.3"
 geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
-geozero = { version = "0.14.0", default-features = false, features = ["with-geo"] }
+geozero = { version = "0.14.0", default-features = false, features = ["with-geo", "with-geojson"] }
 rstar = "0.12.2"
 serde = "1.0.188"
+serde_json = "1.0.135"
