--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,7 @@ serde = "1.0.216"
 serde-wasm-bindgen = "0.6.5"
 serde_json = "1.0.133"
 simple_logger = "5.0.0"
+utils = { git = "https://github.com/a-b-street/utils" }
 wasm-bindgen = "0.2.97"
 wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.74", features = ["console"] }
