--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -31,6 +31,7 @@ jobs:
           cd web
           npm ci
           npm run wasm-release
+          npm run generate-schema-ts
           npm run build --if-present
           # TODO Not sure why this is happening
           mv dist/assets/backend_bg.wasm dist/
