--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "wasm-release": "wasm-pack build --release --target web ../backend",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "fmt": "npx prettier --write *.html src/**"
+    "fmt": "npx prettier --write *.html src/**",
+    "generate-schema-ts": "tsx src/forms/generate_ts.ts src/forms/v2.json > src/forms/v2_types.ts"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
@@ -23,6 +24,7 @@
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.0",
     "tslib": "^2.6.3",
+    "tsx": "^4.19.2",
     "typescript": "^5.4.5",
     "vite": "^4.5.3",
     "vite-plugin-wasm-pack": "0.1.11"
@@ -34,6 +36,7 @@
     "@turf/center": "^7.2.0",
     "@turf/destination": "^7.2.0",
     "@turf/distance": "^7.2.0",
+    "humanize-string": "^3.0.0",
     "route-snapper": "^0.4.9",
     "route-snapper-ts": "^0.0.8",
     "svelte-maplibre": "^0.9.7",
