--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "fmt": "npx prettier --write *.html src/**",
-    "generate-schema-ts": "tsx src/forms/generate_ts.ts src/forms/v2.json > src/forms/v2_types.ts"
+    "generate-schema-ts": "tsx src/forms/generate_ts.ts > src/forms/infra_types.ts; npx prettier --write src/forms/infra_types.ts"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
